feat: add user role and menu management